--- a/Fuentes/SimsonsCitaAndroid/app/src/main/res/values/colors.xml
+++ b/Fuentes/SimsonsCitaAndroid/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="amarillo">#fddb3a</color>
-    <color name="celeste">#5fdde5</color>
+    <color name="celeste">#0779e4</color>
 </resources>
